--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-line-md": "^1.1.0",
+    "@iconify/react": "^1.1.4",
     "gh-pages": "^3.2.3"
   }
 }
